--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Invest The Nest</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <div id="modal-root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Invest The Nest</title>
+  <!-- Link to the generated Tailwind CSS file -->
+  <link href="/dist/output.css" rel="stylesheet">
+</head>
+<body class="bg-gray-50 text-gray-900">
+  <div id="root"></div>
+  <div id="modal-root"></div>
+  <!-- Include the main JavaScript bundle -->
+  <script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
