changed chart w chris

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Link to the generated Tailwind CSS file -->
   <link href="/src/output.css" rel="stylesheet">
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-slate-950 text-gray-900">
   <div id="root"></div>
   <div id="modal-root"></div>
   <!-- Include the main JavaScript bundle -->
